--- a/app/src/main/res/layout/activity_motion_sample_layout.xml
+++ b/app/src/main/res/layout/activity_motion_sample_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layoutDescription="@xml/sample_three_keyfameset"
+    app:layoutDescription="@xml/sample_four"
     app:showPaths="true"
     tools:context=".ui.motionlayout.MotionSampleActivity">
 
