--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="black">#000000</color>
     <color name="transparent">@android:color/transparent</color>
     <color name="colorBookMark">#FFD600</color>
+    <color name="textColor">#CCCCCC</color>
 </resources>
