--- a/webview/src/main/res/layout/activity_webview.xml
+++ b/webview/src/main/res/layout/activity_webview.xml
@@ -37,9 +37,11 @@
 
         </RelativeLayout>
 
-        <WebView
-            android:id="@+id/webview"
+        <FrameLayout
+            android:id="@+id/web_view_fragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_weight="1"
+            android:layout_height="0dp"/>
+
     </LinearLayout>
 </layout>
