--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,8 @@
 
     <color name="mine_vip_progress_start">#FFFFFF</color>
     <color name="mine_vip_progress_end">#f4827f</color>
+
+    <color name="maoyan_common_default_shadow_color">#2a000000</color>
+    <color name="maoyan_common_default_shadowback_color">#fff</color>
+    <color name="maoyan_common_default_textColor">#000</color>
 </resources>
