--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,5 @@
     <color name="maoyan_common_default_shadow_color">#2a000000</color>
     <color name="maoyan_common_default_shadowback_color">#fff</color>
     <color name="maoyan_common_default_textColor">#000</color>
+    <color name="shadow">#F2000000</color>
 </resources>
